--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
-    "dev": "ts-node --esm src/index.ts",
+    "dev": "ts-node --project tsconfig.node.json --esm src/index.ts",
     "db:gen": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
@@ -22,13 +22,19 @@
     "docker:db": "docker-compose exec postgres psql -U livingston -d livingston",
     "docker:reset": "docker-compose down -v && docker-compose up -d"
   },
-  "keywords": ["nba", "etl", "drizzle", "postgres"],
+  "keywords": [
+    "nba",
+    "etl",
+    "drizzle",
+    "postgres"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.9.1",
     "@types/pg": "^8.15.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
